2020-12-31  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hlinks.el (ee-epackage-re-27): new variable.
	(ee-epackage-bufferp): use `ee-epackage-re-27'.

2020-12-29  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (Man-translate-references): add autoload.
	(Man-notify-when-ready): removed the defadvice.
	(ee-find-man-buffer): new variable.
	(ee-find-man-goto-pos-spec): new function.
	(Man-bgproc-sentinel): new advice-add.
	(find-man): rewrote completely.

2020-12-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-code.el (ee-code-c-d-:gz): commented out the
	`(ee-use-{c}-tags)'.

	* eev-intro.el (find-anchors-intro): rewrote completely.

2020-12-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hlinks.el (ee-find-dired-links): new function.
	(ee-find-here-links): added a line that runs
	`(ee-find-dired-links)' when `(ee-dired-bufferp)' is true - but
	that line is currently commented out.

	* eev-intro.el (find-eev-intro): added a new section: "4. The
	prefix `find-'".

2020-12-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-audiovideo-intro): rewrote the section 4.1
	completely. It is now titled "4.1. `find-extra-file-links'".

	* eev-tlinks.el (find-extra-file-links): fixed the link to
	`(find-audiovideo-intro)'.

2020-12-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-code.el (ee-code-c-d-:w3m): new function.
	(ee-code-c-d-:tags): new function.
	(ee-code-c-d-base): moved the `defun find-{c}w3m', the `defun
	find-{c}tags', and their support functions to `ee-code-c-d-:w3m'
	and `ee-code-c-d-:tags'.

2020-12-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* README.org: new file.

	* README-old.md: renamed "README.md" to "README-old.md".

	* eev-intro.el (find-little-languages-intro): new function.

2020-12-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-esetkey-links): new function.
	(ee-read-command): new function.
	(ee-command-at-point): new function.

	* eev-testblocks.el (ee-insert-test-org-mode): new function.
